--- a/planejamento_solucao.ipynb
+++ b/planejamento_solucao.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "7b2a4426",
+   "metadata": {},
+   "source": [
+    "# Hackday 01 - Dados Inglórios"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "9deb3661",
    "metadata": {},
    "source": [
