--- a/planejamento_solucao.ipynb
+++ b/planejamento_solucao.ipynb
@@ -29,6 +29,14 @@
     "O objetivo desta competição é criar um modelo de aprendizado de máquina para prever quais indivíduos vão ou não utilizar uma conta bancária. Os modelos e soluções desenvolvidos devem fornecer uma indicação do estado da inclusão financeira no Quênia, Ruanda, Tanzânia e Uganda.\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "494e5b2f",
+   "metadata": {},
+   "source": [
+    "## Planejamento da Solução"
+   ]
   }
  ],
  "metadata": {
@@ -47,7 +55,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
