--- a/end-to-end.ipynb
+++ b/end-to-end.ipynb
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 3,
    "id": "ebb8fc54",
    "metadata": {
     "ExecuteTime": {
@@ -177,7 +177,19 @@
      "start_time": "2022-05-28T16:33:44.856705Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'sklearn'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [3]\u001b[0m, in \u001b[0;36m<cell line: 12>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mIPython\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdisplay\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m HTML\n\u001b[0;32m     11\u001b[0m \u001b[38;5;66;03m# scikit-learn\u001b[39;00m\n\u001b[1;32m---> 12\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m model_selection \u001b[38;5;28;01mas\u001b[39;00m ms\n\u001b[0;32m     13\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m ensemble\n\u001b[0;32m     14\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m metrics\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'sklearn'"
+     ]
+    }
+   ],
    "source": [
     "# manipulação de dados\n",
     "import pandas as pd\n",
@@ -205,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "a1f79abd",
    "metadata": {
     "ExecuteTime": {
@@ -213,28 +225,7 @@
      "start_time": "2022-05-28T15:43:17.653107Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "%pylab is deprecated, use %matplotlib inline and import the required libraries.\n",
-      "Populating the interactive namespace from numpy and matplotlib\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<style>.container {width:100% !important;}</style>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def jupyter_settings():\n",
     "    %matplotlib inline\n",
@@ -264,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "id": "01cb76bb",
    "metadata": {
     "ExecuteTime": {
@@ -401,15 +392,36 @@
        "</div>"
       ],
       "text/plain": [
-       "    country  year       uniqueid location_type cellphone_access  household_size  age_of_respondent gender_of_respondent relationship_with_head           marital_status      education_level             job_type                     uid bank_account\n",
-       "0    Rwanda  2016  uniqueid_4858         Rural              Yes               6                 45                 Male      Head of Household       Divorced/Seperated    Primary education  Farming and Fishing    Rwanda_uniqueid_4858           No\n",
-       "1  Tanzania  2017  uniqueid_3015         Urban               No               4                 33               Female      Head of Household     Single/Never Married    Primary education        Self employed  Tanzania_uniqueid_3015           No\n",
-       "2    Rwanda  2016   uniqueid_103         Rural              Yes               7                 43                 Male      Head of Household  Married/Living together  Secondary education  Farming and Fishing     Rwanda_uniqueid_103           No\n",
-       "3    Rwanda  2016  uniqueid_4582         Rural               No               6                 35               Female      Head of Household  Married/Living together    Primary education  Farming and Fishing    Rwanda_uniqueid_4582           No\n",
-       "4  Tanzania  2017  uniqueid_2854         Urban              Yes               2                 30                 Male      Head of Household     Single/Never Married    Primary education  Informally employed  Tanzania_uniqueid_2854           No"
+       "    country  year       uniqueid location_type cellphone_access  \\\n",
+       "0    Rwanda  2016  uniqueid_4858         Rural              Yes   \n",
+       "1  Tanzania  2017  uniqueid_3015         Urban               No   \n",
+       "2    Rwanda  2016   uniqueid_103         Rural              Yes   \n",
+       "3    Rwanda  2016  uniqueid_4582         Rural               No   \n",
+       "4  Tanzania  2017  uniqueid_2854         Urban              Yes   \n",
+       "\n",
+       "   household_size  age_of_respondent gender_of_respondent  \\\n",
+       "0               6                 45                 Male   \n",
+       "1               4                 33               Female   \n",
+       "2               7                 43                 Male   \n",
+       "3               6                 35               Female   \n",
+       "4               2                 30                 Male   \n",
+       "\n",
+       "  relationship_with_head           marital_status      education_level  \\\n",
+       "0      Head of Household       Divorced/Seperated    Primary education   \n",
+       "1      Head of Household     Single/Never Married    Primary education   \n",
+       "2      Head of Household  Married/Living together  Secondary education   \n",
+       "3      Head of Household  Married/Living together    Primary education   \n",
+       "4      Head of Household     Single/Never Married    Primary education   \n",
+       "\n",
+       "              job_type                     uid bank_account  \n",
+       "0  Farming and Fishing    Rwanda_uniqueid_4858           No  \n",
+       "1        Self employed  Tanzania_uniqueid_3015           No  \n",
+       "2  Farming and Fishing     Rwanda_uniqueid_103           No  \n",
+       "3  Farming and Fishing    Rwanda_uniqueid_4582           No  \n",
+       "4  Informally employed  Tanzania_uniqueid_2854           No  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "id": "f508a3ce",
    "metadata": {
     "ExecuteTime": {
@@ -453,11 +465,42 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "83e34ebd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1 = df1.drop(columns='uid')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "77b33cf9",
    "metadata": {},
    "source": [
     "### 1.2. Checar Dimensões"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "035f5b4f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(11762, 14)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1.shape"
    ]
   },
   {
@@ -469,11 +512,55 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "5edc43f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "country                   object\n",
+       "year                       int64\n",
+       "uniqueid                   int64\n",
+       "location_type             object\n",
+       "cellphone_access          object\n",
+       "household_size             int64\n",
+       "age_of_respondent          int64\n",
+       "gender_of_respondent      object\n",
+       "relationship_with_head    object\n",
+       "marital_status            object\n",
+       "education_level           object\n",
+       "job_type                  object\n",
+       "bank_account              object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1.dtypes"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "c7a3b928",
    "metadata": {},
    "source": [
     "### 1.4. Alterar Tipos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "8186b3f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1['uniqueid'] = df1['uniqueid'].astype('str').str.extractall('(\\d+)').unstack().fillna('').sum(axis=1).astype('int64')\n"
    ]
   },
   {
@@ -486,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "id": "5512f338",
    "metadata": {
     "ExecuteTime": {
@@ -515,7 +602,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -534,10 +621,125 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e3726430",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "34775d08",
    "metadata": {},
    "source": [
     "### 1.7. Estatística Descritiva"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "b1ed2f43",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>count</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>std</th>\n",
+       "      <th>min</th>\n",
+       "      <th>25%</th>\n",
+       "      <th>50%</th>\n",
+       "      <th>75%</th>\n",
+       "      <th>max</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>year</th>\n",
+       "      <td>11762.0</td>\n",
+       "      <td>2016.983336</td>\n",
+       "      <td>0.848669</td>\n",
+       "      <td>2016.0</td>\n",
+       "      <td>2016.0</td>\n",
+       "      <td>2017.0</td>\n",
+       "      <td>2018.0</td>\n",
+       "      <td>2018.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>uniqueid</th>\n",
+       "      <td>11762.0</td>\n",
+       "      <td>3438.185088</td>\n",
+       "      <td>2265.873567</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1450.0</td>\n",
+       "      <td>3232.0</td>\n",
+       "      <td>5209.0</td>\n",
+       "      <td>8756.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>household_size</th>\n",
+       "      <td>11762.0</td>\n",
+       "      <td>3.793913</td>\n",
+       "      <td>2.225423</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>21.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>age_of_respondent</th>\n",
+       "      <td>11762.0</td>\n",
+       "      <td>38.602364</td>\n",
+       "      <td>16.334624</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>48.0</td>\n",
+       "      <td>100.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     count         mean          std     min     25%     50%  \\\n",
+       "year               11762.0  2016.983336     0.848669  2016.0  2016.0  2017.0   \n",
+       "uniqueid           11762.0  3438.185088  2265.873567     2.0  1450.0  3232.0   \n",
+       "household_size     11762.0     3.793913     2.225423     1.0     2.0     3.0   \n",
+       "age_of_respondent  11762.0    38.602364    16.334624    16.0    26.0    35.0   \n",
+       "\n",
+       "                      75%     max  \n",
+       "year               2018.0  2018.0  \n",
+       "uniqueid           5209.0  8756.0  \n",
+       "household_size        5.0    21.0  \n",
+       "age_of_respondent    48.0   100.0  "
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1.describe().T"
    ]
   },
   {
@@ -1104,7 +1306,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
