--- a/end-to-end.ipynb
+++ b/end-to-end.ipynb
@@ -455,7 +455,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "8223d5f9",
+   "id": "9206c72b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,7 +474,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "d4a7da84",
+   "id": "a24ef46e",
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +503,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "6a800aed",
+   "id": "c6bc441d",
    "metadata": {},
    "outputs": [
     {
@@ -545,7 +545,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "6295e4ec",
+   "id": "8e575926",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c0ce660",
+   "id": "d8211ff7",
    "metadata": {},
    "source": []
   },
@@ -626,7 +626,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "fc15f79d",
+   "id": "1749e445",
    "metadata": {},
    "outputs": [
     {
@@ -663,7 +663,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "864c4630",
+   "id": "a419487d",
    "metadata": {},
    "outputs": [
     {
@@ -772,7 +772,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "ef57b696",
+   "id": "5f39faf0",
    "metadata": {},
    "outputs": [
     {
@@ -833,10 +833,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22df971e",
+   "id": "a0f713e2",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "with_account = df1[df1['bank_account'] == 1]\n"
+   ]
   },
   {
    "cell_type": "markdown",
