--- a/end-to-end.ipynb
+++ b/end-to-end.ipynb
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 1,
    "id": "ebb8fc54",
    "metadata": {
     "ExecuteTime": {
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "a1f79abd",
    "metadata": {
     "ExecuteTime": {
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "01cb76bb",
    "metadata": {
     "ExecuteTime": {
@@ -409,7 +409,7 @@
        "4  Tanzania  2017  uniqueid_2854         Urban              Yes               2                 30                 Male      Head of Household     Single/Never Married    Primary education  Informally employed  Tanzania_uniqueid_2854           No"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "f508a3ce",
    "metadata": {
     "ExecuteTime": {
@@ -442,6 +442,115 @@
    "outputs": [],
    "source": [
     "df1 = df_raw.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "486022ee-17eb-45d7-a3d4-d0e1945c20d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Rwanda', 'Tanzania', 'Kenya', 'Uganda'], dtype=object)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1['country'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "90c6ffae-571b-4449-b761-555a9f169fde",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Rural', 'Urban'], dtype=object)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1['location_type'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "530e1719-96e7-4d65-9f59-271d794c11d6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Head of Household', 'Spouse', 'Child', 'Parent', 'Other relative',\n",
+       "       'Other non-relatives'], dtype=object)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1['relationship_with_head'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "db41946d-c6e9-418e-8645-44e9d066d306",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Divorced/Seperated', 'Single/Never Married',\n",
+       "       'Married/Living together', 'Widowed', 'Dont know'], dtype=object)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1['marital_status'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "a0df47ae-0491-471c-a9f2-5557d38c1659",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Primary education', 'Secondary education',\n",
+       "       'Vocational/Specialised training', 'Tertiary education',\n",
+       "       'No formal education', 'Other/Dont know/RTA'], dtype=object)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1['education_level'].unique()"
    ]
   },
   {
@@ -486,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "5512f338",
    "metadata": {
     "ExecuteTime": {
@@ -515,7 +624,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -550,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "0ef8e10d",
    "metadata": {
     "ExecuteTime": {
@@ -561,6 +670,171 @@
    "outputs": [],
    "source": [
     "df2 = df1.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "4020c745-0670-4933-8ecf-136642b9a4c9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "country                   object\n",
+       "year                       int64\n",
+       "uniqueid                  object\n",
+       "location_type             object\n",
+       "cellphone_access          object\n",
+       "household_size             int64\n",
+       "age_of_respondent          int64\n",
+       "gender_of_respondent      object\n",
+       "relationship_with_head    object\n",
+       "marital_status            object\n",
+       "education_level           object\n",
+       "job_type                  object\n",
+       "uid                       object\n",
+       "bank_account              object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "f6b40c68-4765-4c4a-ab8c-37e5cfb9c12d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "count = df2['country'].value_counts()\n",
+    "mapper = dict()\n",
+    "for ind in count.index:\n",
+    "    mapper[ind] = count[ind]\n",
+    "    \n",
+    "df2['country'] = df2['country'].map(mapper)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "f6b18d64-cf68-471f-9670-9fcc440cbff8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "count = df2['location_type'].value_counts()\n",
+    "mapper = dict()\n",
+    "for ind in count.index:\n",
+    "    mapper[ind] = count[ind]\n",
+    "    \n",
+    "df2['location_type'] = df2['location_type'].map(mapper)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "ffab360b-baea-4a32-b82d-706f0c8a482e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "count = df2['cellphone_access'].value_counts()\n",
+    "mapper = dict()\n",
+    "for ind in count.index:\n",
+    "    mapper[ind] = count[ind]\n",
+    "    \n",
+    "df2['cellphone_access'] = df2['cellphone_access'].map(mapper)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "93cf82af-02ab-4d96-abdf-6c15ff67e80c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "count = df2['gender_of_respondent'].value_counts()\n",
+    "mapper = dict()\n",
+    "for ind in count.index:\n",
+    "    mapper[ind] = count[ind]\n",
+    "    \n",
+    "df2['gender_of_respondent'] = df2['gender_of_respondent'].map(mapper)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "51862719-aba1-4bdf-be22-1146a99f4598",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "count = df2['relationship_with_head'].value_counts()\n",
+    "mapper = dict()\n",
+    "for ind in count.index:\n",
+    "    mapper[ind] = count[ind]\n",
+    "    \n",
+    "df2['relationship_with_head'] = df2['relationship_with_head'].map(mapper)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "b6093925-686d-42e8-913d-c3d5b22ec434",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "count = df2['marital_status'].value_counts()\n",
+    "mapper = dict()\n",
+    "for ind in count.index:\n",
+    "    mapper[ind] = count[ind]\n",
+    "    \n",
+    "df2['marital_status'] = df2['marital_status'].map(mapper)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "06106564-e8c3-4876-b0dd-5071740bec72",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "count = df2['education_level'].value_counts()\n",
+    "mapper = dict()\n",
+    "for ind in count.index:\n",
+    "    mapper[ind] = count[ind]\n",
+    "    \n",
+    "df2['education_level'] = df2['education_level'].map(mapper)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "0f40e4c3-7ff7-4add-be83-ba347e17b031",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "count = df2['job_type'].value_counts()\n",
+    "mapper = dict()\n",
+    "for ind in count.index:\n",
+    "    mapper[ind] = count[ind]\n",
+    "    \n",
+    "df2['job_type'] = df2['job_type'].map(mapper)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "344555a6-ee42-4223-8140-e9f3c0b91d8f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2['bank_account'] = df2['bank_account'].apply(lambda x: 1 if x == 'Yes' else 0)"
    ]
   },
   {
@@ -589,7 +863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 32,
    "id": "b60808b2",
    "metadata": {
     "ExecuteTime": {
@@ -612,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 33,
    "id": "00784e93",
    "metadata": {
     "ExecuteTime": {
@@ -659,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 34,
    "id": "8d0a0f61",
    "metadata": {
     "ExecuteTime": {
@@ -690,7 +964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 35,
    "id": "5cbb50da",
    "metadata": {
     "ExecuteTime": {
@@ -713,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 36,
    "id": "68026fbc",
    "metadata": {
     "ExecuteTime": {
@@ -762,103 +1036,103 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Rwanda</td>\n",
+       "      <td>4335</td>\n",
        "      <td>2016</td>\n",
        "      <td>uniqueid_4858</td>\n",
-       "      <td>Rural</td>\n",
-       "      <td>Yes</td>\n",
+       "      <td>7100</td>\n",
+       "      <td>8786</td>\n",
        "      <td>6</td>\n",
        "      <td>45</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>Head of Household</td>\n",
-       "      <td>Divorced/Seperated</td>\n",
-       "      <td>Primary education</td>\n",
-       "      <td>Farming and Fishing</td>\n",
+       "      <td>4860</td>\n",
+       "      <td>6358</td>\n",
+       "      <td>1034</td>\n",
+       "      <td>6408</td>\n",
+       "      <td>2732</td>\n",
        "      <td>Rwanda_uniqueid_4858</td>\n",
-       "      <td>No</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Tanzania</td>\n",
+       "      <td>3288</td>\n",
        "      <td>2017</td>\n",
        "      <td>uniqueid_3015</td>\n",
-       "      <td>Urban</td>\n",
-       "      <td>No</td>\n",
+       "      <td>4662</td>\n",
+       "      <td>2976</td>\n",
        "      <td>4</td>\n",
        "      <td>33</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>Head of Household</td>\n",
-       "      <td>Single/Never Married</td>\n",
-       "      <td>Primary education</td>\n",
-       "      <td>Self employed</td>\n",
+       "      <td>6902</td>\n",
+       "      <td>6358</td>\n",
+       "      <td>3970</td>\n",
+       "      <td>6408</td>\n",
+       "      <td>3207</td>\n",
        "      <td>Tanzania_uniqueid_3015</td>\n",
-       "      <td>No</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Rwanda</td>\n",
+       "      <td>4335</td>\n",
        "      <td>2016</td>\n",
        "      <td>uniqueid_103</td>\n",
-       "      <td>Rural</td>\n",
-       "      <td>Yes</td>\n",
+       "      <td>7100</td>\n",
+       "      <td>8786</td>\n",
        "      <td>7</td>\n",
        "      <td>43</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>Head of Household</td>\n",
-       "      <td>Married/Living together</td>\n",
-       "      <td>Secondary education</td>\n",
-       "      <td>Farming and Fishing</td>\n",
+       "      <td>4860</td>\n",
+       "      <td>6358</td>\n",
+       "      <td>5433</td>\n",
+       "      <td>2129</td>\n",
+       "      <td>2732</td>\n",
        "      <td>Rwanda_uniqueid_103</td>\n",
-       "      <td>No</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Rwanda</td>\n",
+       "      <td>4335</td>\n",
        "      <td>2016</td>\n",
        "      <td>uniqueid_4582</td>\n",
-       "      <td>Rural</td>\n",
-       "      <td>No</td>\n",
+       "      <td>7100</td>\n",
+       "      <td>2976</td>\n",
        "      <td>6</td>\n",
        "      <td>35</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>Head of Household</td>\n",
-       "      <td>Married/Living together</td>\n",
-       "      <td>Primary education</td>\n",
-       "      <td>Farming and Fishing</td>\n",
+       "      <td>6902</td>\n",
+       "      <td>6358</td>\n",
+       "      <td>5433</td>\n",
+       "      <td>6408</td>\n",
+       "      <td>2732</td>\n",
        "      <td>Rwanda_uniqueid_4582</td>\n",
-       "      <td>No</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Tanzania</td>\n",
+       "      <td>3288</td>\n",
        "      <td>2017</td>\n",
        "      <td>uniqueid_2854</td>\n",
-       "      <td>Urban</td>\n",
-       "      <td>Yes</td>\n",
+       "      <td>4662</td>\n",
+       "      <td>8786</td>\n",
        "      <td>2</td>\n",
        "      <td>30</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>Head of Household</td>\n",
-       "      <td>Single/Never Married</td>\n",
-       "      <td>Primary education</td>\n",
-       "      <td>Informally employed</td>\n",
+       "      <td>4860</td>\n",
+       "      <td>6358</td>\n",
+       "      <td>3970</td>\n",
+       "      <td>6408</td>\n",
+       "      <td>2788</td>\n",
        "      <td>Tanzania_uniqueid_2854</td>\n",
-       "      <td>No</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    country  year       uniqueid location_type cellphone_access  household_size  age_of_respondent gender_of_respondent relationship_with_head           marital_status      education_level             job_type                     uid bank_account\n",
-       "0    Rwanda  2016  uniqueid_4858         Rural              Yes               6                 45                 Male      Head of Household       Divorced/Seperated    Primary education  Farming and Fishing    Rwanda_uniqueid_4858           No\n",
-       "1  Tanzania  2017  uniqueid_3015         Urban               No               4                 33               Female      Head of Household     Single/Never Married    Primary education        Self employed  Tanzania_uniqueid_3015           No\n",
-       "2    Rwanda  2016   uniqueid_103         Rural              Yes               7                 43                 Male      Head of Household  Married/Living together  Secondary education  Farming and Fishing     Rwanda_uniqueid_103           No\n",
-       "3    Rwanda  2016  uniqueid_4582         Rural               No               6                 35               Female      Head of Household  Married/Living together    Primary education  Farming and Fishing    Rwanda_uniqueid_4582           No\n",
-       "4  Tanzania  2017  uniqueid_2854         Urban              Yes               2                 30                 Male      Head of Household     Single/Never Married    Primary education  Informally employed  Tanzania_uniqueid_2854           No"
+       "   country  year       uniqueid  location_type  cellphone_access  household_size  age_of_respondent  gender_of_respondent  relationship_with_head  marital_status  education_level  job_type                     uid  bank_account\n",
+       "0     4335  2016  uniqueid_4858           7100              8786               6                 45                  4860                    6358            1034             6408      2732    Rwanda_uniqueid_4858             0\n",
+       "1     3288  2017  uniqueid_3015           4662              2976               4                 33                  6902                    6358            3970             6408      3207  Tanzania_uniqueid_3015             0\n",
+       "2     4335  2016   uniqueid_103           7100              8786               7                 43                  4860                    6358            5433             2129      2732     Rwanda_uniqueid_103             0\n",
+       "3     4335  2016  uniqueid_4582           7100              2976               6                 35                  6902                    6358            5433             6408      2732    Rwanda_uniqueid_4582             0\n",
+       "4     3288  2017  uniqueid_2854           4662              8786               2                 30                  4860                    6358            3970             6408      2788  Tanzania_uniqueid_2854             0"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -869,7 +1143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 37,
    "id": "31a51331",
    "metadata": {
     "ExecuteTime": {
@@ -879,8 +1153,8 @@
    },
    "outputs": [],
    "source": [
-    "X = df6.select_dtypes(include=['int64', 'float64'])\n",
-    "y = df6['bank_account'].apply(lambda x: 1 if x == 'Yes' else 0)\n",
+    "X = df6.drop(['uniqueid','uid','bank_account'],axis=1)\n",
+    "y = df6['bank_account']\n",
     "\n",
     "x_train, x_test, y_train, y_test = ms.train_test_split(X, y, test_size=0.3, random_state=42)"
    ]
@@ -908,7 +1182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 38,
    "id": "074beb9b",
    "metadata": {
     "ExecuteTime": {
@@ -920,10 +1194,10 @@
     {
      "data": {
       "text/plain": [
-       "0.12112259970457902"
+       "0.4320388349514563"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1104,7 +1378,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
