--- a/end-to-end.ipynb
+++ b/end-to-end.ipynb
@@ -915,7 +915,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "973e21ed",
+   "id": "5a49f274",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-05-28T18:31:47.522535Z",
@@ -1176,7 +1176,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd564539",
+   "id": "8b1d7763",
    "metadata": {},
    "source": [
     "**H1.** Os países desenvolvidos tem 10% a mais de contas digitais  \n",
@@ -1233,6 +1233,31 @@
    "outputs": [],
    "source": [
     "df4 = df3.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "0e736759",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-05-28T20:14:00.137426Z",
+     "start_time": "2022-05-28T20:14:00.131737Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.1%\n"
+     ]
+    }
+   ],
+   "source": [
+    "yes = 1000\n",
+    "total = 10000\n",
+    "print(f'{yes/total}%')"
    ]
   },
   {
@@ -1506,7 +1531,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c23b207",
+   "id": "ff965455",
    "metadata": {},
    "outputs": [],
    "source": [
