--- a/end-to-end_c2.ipynb
+++ b/end-to-end_c2.ipynb
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 3,
    "id": "ebb8fc54",
    "metadata": {
     "ExecuteTime": {
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 4,
    "id": "a1f79abd",
    "metadata": {
     "ExecuteTime": {
@@ -237,7 +237,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/bem/.pyenv/versions/3.9.5/envs/hackday_01/lib/python3.9/site-packages/IPython/core/magics/pylab.py:162: UserWarning: pylab import has clobbered these variables: ['sample']\n",
+      "/home/penalva/portfolio/pa005_insiders_clustering/venvpa4clustering/lib/python3.9/site-packages/IPython/core/magics/pylab.py:162: UserWarning: pylab import has clobbered these variables: ['sample']\n",
       "`%matplotlib` prevents importing * from pylab and numpy\n",
       "  warn(\"pylab import has clobbered these variables: %s\"  % clobbered +\n"
      ]
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 5,
    "id": "01cb76bb",
    "metadata": {
     "ExecuteTime": {
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 6,
    "id": "f508a3ce",
    "metadata": {
     "ExecuteTime": {
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 7,
    "id": "0ef8e10d",
    "metadata": {
     "ExecuteTime": {
@@ -817,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": 8,
    "id": "b60808b2",
    "metadata": {
     "ExecuteTime": {
@@ -840,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
+   "execution_count": 9,
    "id": "00784e93",
    "metadata": {
     "ExecuteTime": {
@@ -1695,7 +1695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 326,
+   "execution_count": 10,
    "id": "8d0a0f61",
    "metadata": {
     "ExecuteTime": {
@@ -1795,7 +1795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": 11,
    "id": "ced6219e",
    "metadata": {
     "ExecuteTime": {
@@ -1958,7 +1958,7 @@
        "4        2  2017  uniqueid_2854                0                1                   1                   0               2                 30                       1                       0                       1               3                2         5  Tanzania_uniqueid_2854           No"
       ]
      },
-     "execution_count": 330,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2034,7 +2034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 332,
+   "execution_count": 12,
    "id": "fa9b61ea",
    "metadata": {
     "ExecuteTime": {
@@ -2050,7 +2050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 333,
+   "execution_count": 13,
    "id": "2e415576-4836-4689-a324-018f22117d80",
    "metadata": {
     "ExecuteTime": {
@@ -2112,7 +2112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 334,
+   "execution_count": 14,
    "id": "5cbb50da",
    "metadata": {
     "ExecuteTime": {
@@ -2123,6 +2123,120 @@
    "outputs": [],
    "source": [
     "df6 = df5.copy()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "09ee1c18-577a-44d7-b3f2-1b3e5497b91e",
+   "metadata": {},
+   "source": [
+    "### 6.0 Seleção de Features pela importância da Random Forest\n",
+    "\n",
+    "- Usamos a mesma random forest escolhida em ciclo prévio para verificar a importância das features."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "84d08b17-1ff1-41b2-8c6a-cc37776114cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>country</th>\n",
+       "      <th>location_type_1</th>\n",
+       "      <th>location_type_2</th>\n",
+       "      <th>cellphone_access_1</th>\n",
+       "      <th>cellphone_access_2</th>\n",
+       "      <th>age_of_respondent</th>\n",
+       "      <th>gender_of_respondent_1</th>\n",
+       "      <th>gender_of_respondent_2</th>\n",
+       "      <th>relationship_with_head</th>\n",
+       "      <th>marital_status</th>\n",
+       "      <th>education_level</th>\n",
+       "      <th>job_type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>importance</th>\n",
+       "      <td>0.110138</td>\n",
+       "      <td>0.029672</td>\n",
+       "      <td>0.028474</td>\n",
+       "      <td>0.046683</td>\n",
+       "      <td>0.046915</td>\n",
+       "      <td>0.146271</td>\n",
+       "      <td>0.01617</td>\n",
+       "      <td>0.016496</td>\n",
+       "      <td>0.043217</td>\n",
+       "      <td>0.037722</td>\n",
+       "      <td>0.324723</td>\n",
+       "      <td>0.15352</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>0.037064</td>\n",
+       "      <td>0.025349</td>\n",
+       "      <td>0.023654</td>\n",
+       "      <td>0.044608</td>\n",
+       "      <td>0.045199</td>\n",
+       "      <td>0.030956</td>\n",
+       "      <td>0.009981</td>\n",
+       "      <td>0.010148</td>\n",
+       "      <td>0.014763</td>\n",
+       "      <td>0.012856</td>\n",
+       "      <td>0.071131</td>\n",
+       "      <td>0.058163</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             country location_type_1 location_type_2 cellphone_access_1 cellphone_access_2 age_of_respondent gender_of_respondent_1 gender_of_respondent_2 relationship_with_head marital_status education_level  job_type\n",
+       "importance  0.110138        0.029672        0.028474           0.046683           0.046915          0.146271                0.01617               0.016496               0.043217       0.037722        0.324723   0.15352\n",
+       "std         0.037064        0.025349        0.023654           0.044608           0.045199          0.030956               0.009981               0.010148               0.014763       0.012856        0.071131  0.058163"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X = df6.drop(['uniqueid','uid','bank_account', 'year', 'household_size'],axis=1)\n",
+    "y = df6['bank_account']\n",
+    "\n",
+    "rfc_selection = ensemble.RandomForestClassifier(random_state=42, n_estimators=3000, max_depth=9)\n",
+    "\n",
+    "# treinar o modelo (com todo o dataset)\n",
+    "rfc_selection.fit(X, y)\n",
+    "\n",
+    "importance = pd.DataFrame(columns = X.columns,index=['importance','std'])\n",
+    "\n",
+    "importance.loc['importance',:] = rfc_selection.feature_importances_\n",
+    "importance.loc['std',:] = np.std([tree.feature_importances_ for tree in rfc_selection.estimators_], axis=0)\n",
+    "\n",
+    "importance"
    ]
   },
   {
@@ -2323,6 +2437,14 @@
     "y = df6['bank_account']\n",
     "\n",
     "x_train, x_test, y_train, y_test = ms.train_test_split(X, y, test_size=0.3, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3cd5027c-d2d8-445c-b194-b0680cff1b4e",
+   "metadata": {},
+   "source": [
+    "### 6.2 Balanceamento de dados"
    ]
   },
   {
@@ -2925,7 +3047,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
