--- a/end-to-end_c2.ipynb
+++ b/end-to-end_c2.ipynb
@@ -736,46 +736,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 725,
-   "id": "4020c745-0670-4933-8ecf-136642b9a4c9",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2022-05-29T18:43:52.396422Z",
-     "start_time": "2022-05-29T18:43:52.388798Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "country                   object\n",
-       "year                       int64\n",
-       "uniqueid                  object\n",
-       "location_type             object\n",
-       "cellphone_access          object\n",
-       "household_size             int64\n",
-       "age_of_respondent          int64\n",
-       "gender_of_respondent      object\n",
-       "relationship_with_head    object\n",
-       "marital_status            object\n",
-       "education_level           object\n",
-       "job_type                  object\n",
-       "uid                       object\n",
-       "bank_account              object\n",
-       "dtype: object"
-      ]
-     },
-     "execution_count": 725,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df2.dtypes"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "b8673e18",
    "metadata": {},
@@ -1025,7 +985,7 @@
    "id": "33361953",
    "metadata": {},
    "source": [
-    "**FALSO** - A maior proporção das contas digitais está no vocational/specialised training"
+    "**VERDADEIRO** - A maior proporção das contas digitais está no vocational/specialised training"
    ]
   },
   {
@@ -3486,7 +3446,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
